force-app/main/default/objects/Level__c/Level__c.object-meta.xml
<CustomObject>
    <description>Loyalty tier levels</description>
    <label>Level</label>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>