force-app/main/default/objects/Level__c/fields/Center_Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Center_Donation_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Center Donation Type this level is related to.</description>
    <label>Center Donation Type</label>
    <referenceTo>Center_Donation_Type__c</referenceTo>
    <relationshipLabel>Levels</relationshipLabel>
    <relationshipName>Levels</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>