force-app/main/default/objects/Level__c/fields/Desc_Label__c.field-meta.xml
<CustomField>
    <fullName>Desc_Label__c</fullName>
    <description>The Custom Label name for Donor facing description of the Loyalty Level</description>
    <inlineHelpText>The Custom Label name for Donor facing description of the Loyalty Level</inlineHelpText>
    <label>Desc Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>