force-app/main/default/objects/Level__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Internal descriptive text for the Loyalty Level</description>
    <inlineHelpText>Internal descriptive text for the Loyalty Level</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>