force-app/main/default/objects/Level__c/fields/Donation_Payment__c.field-meta.xml
<CustomField>
    <fullName>Donation_Payment__c</fullName>
    <description>The amount of payout ADJUSTMENT for each Donation for a Donor at this Level from the base RATE</description>
    <inlineHelpText>The amount of payout ADJUSTMENT for each Donation for a Donor at this Level from the base RATE</inlineHelpText>
    <label>Donation Payment Adjustment</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>