force-app/main/default/objects/Level__c/fields/Donation_Points__c.field-meta.xml
<CustomField>
    <fullName>Donation_Points__c</fullName>
    <description>The number of points payout for each Donation by a Donor at this Level</description>
    <label>Donation Points</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>