force-app/main/default/objects/Level__c/fields/Donation_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Donation_Threshold__c</fullName>
    <description>Number of donations where Level is valid e.g. 31 means the Level applies at 31st donation.</description>
    <inlineHelpText>The donation number where this Level applies</inlineHelpText>
    <label>Donation Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>