force-app/main/default/objects/Level__c/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Donation Type associated with this set of loyalty Levels</description>
    <label>Donation Type</label>
    <referenceTo>Donation_Type__c</referenceTo>
    <relationshipLabel>Levels</relationshipLabel>
    <relationshipName>Levels</relationshipName>
    <type>Lookup</type>
</CustomField>