force-app/main/default/objects/Level__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows planning of a new Loyalty Level without exposing it while &apos;in development.&apos;</description>
    <inlineHelpText>Allows planning of a new Loyalty Level without exposing it while &apos;in development.&apos;</inlineHelpText>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>