force-app/main/default/objects/Level__c/fields/isVisible__c.field-meta.xml
<CustomField>
    <fullName>isVisible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Provides threshold payouts without being defined as an official Loyalty Level. All Loyalty requirements fulfilling code should ignore.</description>
    <label>isVisible</label>
    <type>Checkbox</type>
</CustomField>