force-app/main/default/objects/Level__c/fields/Next_Level__c.field-meta.xml
<CustomField>
    <fullName>Next_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The next Level as donations are accumulated.</description>
    <label>Next Level</label>
    <referenceTo>Level__c</referenceTo>
    <relationshipLabel>Levels</relationshipLabel>
    <relationshipName>Levels</relationshipName>
    <type>Lookup</type>
</CustomField>