force-app/main/default/objects/Level__c/fields/Schedule_Rights__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Rights__c</fullName>
    <description>What sort of rights for scheduling does this Level grant to the Donor?</description>
    <label>Schedule Rights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Preferred</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Unlimited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>