force-app/main/default/objects/Level__c/fields/Threshold_Payment__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Payment__c</fullName>
    <description>The currency payout when a new level is achieved by a Donor</description>
    <label>Threshold Payment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>