force-app/main/default/objects/Level__c/fields/Threshold_Points__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Points__c</fullName>
    <description>The number of loyalty points awarded upon acheiving this level</description>
    <label>Threshold Points</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>