force-app/main/default/objects/Level__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Donation_Threshold__c</columns>
    <columns>Threshold_Payment__c</columns>
    <columns>Threshold_Points__c</columns>
    <columns>Donation_Payment__c</columns>
    <columns>Donation_Points__c</columns>
    <columns>Schedule_Rights__c</columns>
    <columns>Next_Level__c</columns>
    <columns>Donation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>